# bablusheed

./: .gitignore  .releaserc.cjs  AGENTS.md  CHANGELOG.md  README.md  biome.json  commitlint.config.cjs  icon.icns  index.html  package.json  release.config.mjs  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  commitlint.yml  pr-title.yml  release.yml
assets/: icon.psd
codepacker/: biome.json  index.html
codepacker/src/: App.tsx  index.css
codepacker/src-tauri/: Cargo.toml  tauri.conf.json
codepacker/src-tauri/src/: lib.rs  main.rs
codepacker/src-tauri/src/commands/: mod.rs  pack.rs
codepacker/src/components/: FileTree.tsx  LLMSelector.tsx  OutputPreview.tsx  TitleBar.tsx  TokenBar.tsx
codepacker/src/components/ui/: badge.tsx  checkbox.tsx  slider.tsx  tooltip.tsx
codepacker/src/hooks/: useFileTree.ts  usePackager.ts  useTokenCount.ts
codepacker/src/lib/: llm-profiles.ts  utils.ts
codepacker/src/types/: index.ts
codepacker/src/workers/: tokenizer.worker.ts
docs/: macos-build-signing.md
scripts/: sync-icons.ts  sync-version.mjs
src/: App.css  App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  models.rs
src-tauri/src/commands/: ast.rs  fs.rs  pack.rs
src/components/: EmptyState.tsx  ErrorBoundary.tsx  FilePreview.tsx  FileTree.tsx  LLMSelector.tsx  OutputPreview.tsx  PackOptions.tsx  TitleBar.tsx  TokenBadge.tsx  TokenBar.tsx  TopHeavyFiles.tsx
src/components/ui/: badge.tsx  button.tsx  checkbox.tsx  label.tsx  scroll-area.tsx  select.tsx  separator.tsx  slider.tsx  switch.tsx  tabs.tsx  tooltip.tsx
src/hooks/: useFileTree.ts  usePackager.ts  useTokenCount.ts
src/lib/: ast-reachability.test.ts  ast-reachability.ts  llm-profiles.test.ts  llm-profiles.ts  output-preview.test.ts  output-preview.ts  pack-strategy.test.ts  pack-strategy.ts  render-diagnostics.ts  utils.test.ts  utils.ts
src/types/: index.ts
src/workers/: tokenizer.worker.ts
