[package]
name = "bablusheed"
version = "1.0.0"
description = "Bablusheed - Pack project files for LLM consumption"
authors = ["Ragaeeb Haq"]
homepage = "https://bablusheed.com"
repository = "https://github.com/ragaeeb/bablusheed"
license = "MIT"
edition = "2021"

[lib]
name = "bablusheed_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ignore = "0.4"
glob = "0.3"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["fs"] }
tree-sitter = "0.24"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-go = "0.23"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
incremental = false

